--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,22 @@
 welcome user!
+
+<html>
+<head>
+  <title>Ripened Tomatoes!!!</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  
+  <form id="search">
+    <h1>Enter Zip Code</h1>
+    <input type="search" id="search-name">
+    <input type="submit" value="Submit">
+    <p id="suggestion"></p>
+  </form>
+  
+  <div class="results" id="results"></div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
