--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,105 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body {
+ 	text-align: center;
+ 	width: 100%;
+ 	font-family: "Avenir";
+ 	margin: 0;
+ 	padding: 0;
+ 	background: white;
+ }
+
+ a{
+ 	color: inherit;
+ 	text-decoration: none;
+ }
+
+ input,
+ textarea{
+ 	margin: 18px auto;
+ 	display: block;
+ }
+
+ small{
+ 	font-weight: lighter;
+ }
+
+
+
+ .logo {
+ 	vertical-align: center;
+ } 
+
+ .nav {
+ 	border-top: 3px solid green;
+ 	border-bottom: 6px solid #be0000;
+ }
+ .nav ul {
+ 	list-style: none;
+ 	background-color: red;
+ 	text-align: center;
+ 	padding: 0;
+ 	margin: 0;
+ }
+ .nav li {
+ 	font-family: 'Avenir', sans-serif;
+ 	font-size: 1.2em;
+ 	line-height: 40px;
+ 	height: 40px;
+ 	border-bottom: 1px solid #888;
+ }
+ 
+ .nav a {
+ 	text-decoration: none;
+ 	color: white;
+ 	display: block;
+ 	transition: .3s background-color;
+ }
+ 
+ .nav a:hover {
+ 	background-color: white;
+ 	color: red;
+ }
+ 
+ .nav a.active {
+ 	background-color: red;
+ 	color: #444;
+ 	cursor: default;
+ }
+ 
+ @media screen and (min-width: 600px) {
+ 	.nav li {
+ 		width: 120px;
+ 		border-bottom: none;
+ 		height: 50px;
+ 		line-height: 50px;
+ 		font-size: 1.4em;
+ 	}
+
+ 	.nav li {
+ 		display: inline-block;
+ 		margin-right: -4px;
+ 	}
+ }
+
+ ul li
+ {
+ 	list-style-type: none;
+ }
+
+ .score {
+    background: url('/assets/small_logo.png')
+        no-repeat center;
+	border-bottom: 1px solid gray;
+    margin: 0 auto;
+    width: 400px;
+}
+
+ .content {
+ 	vertical-align: center;
+ 	background-color: white;
+ 	border-bottom: 2px solid #808080;
+ }
