--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 welcome user!
 
+<%= link_to "Movie List", movies_path %>
+
+
 <html>
 <head>
   <title>Ripened Tomatoes!!!</title>
@@ -13,7 +16,7 @@ welcome user!
     <input type="submit" value="Submit">
     <p id="suggestion"></p>
   </form>
-  
+
 
   <div class="results" id="results"></div>
 
