included rating/year in movie list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
 	<%= yield %>
 		</div>
 	</div>
+	<footer>
+	<h2>Team Force Toma-toes LLC</h2>
+	</footer>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
