--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,19 @@
  	font-weight: lighter;
  }
 
-
+footer {
+	margin-top: 15em;
+	background-color: red;
+	color: white;
+	height: 50px;
+	display: center;
+	border-bottom: 6px solid #be0000;
+	vertical-align: center;
+	padding-top: 1em;
+	padding-bottom: 1em; 
+	border-top: 3px solid green;
+	font-weight: lighter;
+}
 
  .logo {
  	vertical-align: center;
@@ -113,5 +125,4 @@
  .content {
  	vertical-align: center;
  	background-color: white;
- 	border-bottom: 2px solid #808080;
  }
