started edit page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 			<ul>
 				<li class="home"><a href="/">Home</a></li>
 				<li class="movies"><a href="/">Movies</a></li>
-				<li class="favorites"><a href="/">Favorites</a></li>
+				<li class="favorites"><a href="/movies">Favorites</a></li>
 				<li class="signout"><a href=" /users/sign_out">Sign Out</a></li>
 			</ul>
 		</div>
@@ -39,5 +39,6 @@
 		</div>
 	</div>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'utils' %>
 </body>
 </html>
